<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:title="@string/menu_Profile"
            android:id="@+id/nProfile"
            android:icon="@drawable/ic_home"
            android:textColor="@color/blue"
            />

        <item android:title="@string/menu_About"
            android:id="@+id/nAbout"
            android:icon="@drawable/ic_stickers"
            android:textColor="@color/blue"
            />

        <item android:title="@string/menu_About"
            android:id="@+id/nStickers"
            android:icon="@drawable/ic_stickers"
            android:textColor="@color/blue"
            />
        <item android:title="@string/menu_Exit"
            android:id="@+id/nSignout"
            android:icon="@drawable/ic_settings"
            android:textColor="@color/blue"
            />
</menu>