<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".SignupActivity">


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/signupPicture"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:layout_constraintBottom_toTopOf="@+id/S_Text_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="sign_up.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
                <EditText

                    android:id="@+id/S_Text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/round_corners"
                    android:drawableStart="@drawable/ic_username"
                    android:padding="20dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/S_Text_username"
                    android:inputType="textPersonName|textCapWords"
                    app:layout_constraintBottom_toTopOf="@+id/S_Text_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signupPicture" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >
                <EditText
                    android:id="@+id/S_Text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/round_corners"
                    android:drawableStart="@drawable/ic_email"
                    android:padding="20dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/S_Text_email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toTopOf="@+id/S_Text_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/S_Text_username" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="15dp"
            >
                <EditText
                    android:id="@+id/S_Text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/round_corners"
                    android:drawableStart="@drawable/ic_lock"
                    android:padding="20dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/S_Text_password"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toTopOf="@+id/S_Text_M_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/S_Text_email" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="15dp"
            >
                <EditText
                    android:id="@+id/S_Text_M_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/round_corners"
                    android:drawableStart="@drawable/ic_lock"
                    android:padding="20dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/S_Text_M_password"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toTopOf="@+id/F_Signup_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/S_Text_password" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/F_Signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/button_outline"
            android:text="@string/F_Signup_button"
            android:textColor="@color/white"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/S_Text_M_password" />

        </LinearLayout>


</RelativeLayout>